--- a/src/main/resources/templates/film.html
+++ b/src/main/resources/templates/film.html
@@ -8,14 +8,14 @@
 	<div>
 		<h4>Dettagli film</h4>
 		<div>
-			<span th:text="${film.titolo}"></span>
-			<span th:text="${film.descrizione}"></span>
-			<span th:text="${film.genere}"></span>
-			<span th:text="${film.regista}"></span>
+			<div th:text="${film.titolo}"></div>
+			<div th:text="${film.descrizione}"></div>
+			<div th:text="${film.genere}"></div>
+			<div th:text="${film.regista}"></div>
 		</div>
 	</div>
 	<footer>
-		<a href="/index.html">Home</a>
+		<a href="/">Home</a>
 	</footer>
 </body>
 </html>
