--- a/src/main/resources/templates/films.html
+++ b/src/main/resources/templates/films.html
@@ -18,7 +18,7 @@
 			<td><a href="film.html"
 				th:href="@{'/toDeleteFilm' + '/' +${film.id}}" th:text="cancella">cancella</a>
 			</td>
-			<td> <a th:href="@{'/prenotazione'+'/'+ ${film.id}}"/> </td>
+			<td> <a th:href="@{'/prenotazione'+'/'+ ${film.id}}"/>prenota </td>
 			
 	</table>
 	<footer>
