--- a/src/main/resources/templates/prenotazione.html
+++ b/src/main/resources/templates/prenotazione.html
@@ -11,6 +11,7 @@
 			<div th:text="${prenotazione.spettacolo.dataConOra}"></div>
 			<div th:text="${prenotazione.spettacolo.numeroPosti}"></div>
 			<div th:text="${prenotazione.spettacolo.film.titolo}"></div>
+			<div th:text="${prenotazione.spettacolo.sala.nome}"></div>
 		</div>
 	</div>
 	<footer>
