Introdotte le funzionalità di login e registrazione

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,9 @@
 <title>Cinema</title>
 </head>
 <body>
+	<section>
+		<a th:href="@{/login}">Accedi</a> <a th:href="@{/register}">Registrati</a>
+	</section>
 	<div>
 		<h4>Operazioni</h4>
 		<div>
