--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 		<div>
 			<a th:href="@{/filmForm}">Inserisci nuovo film</a>
 		</div>
-		<div>
+		<div class="admin">
 			<a th:href="@{/films}">Visualizza tutti i film</a>
 		</div>
 	</div>
