--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 		<div>
 			<a th:href="@{/filmForm}">Inserisci nuovo film</a>
 		</div>
-		<div class="admin">
+		<div >
 			<a th:href="@{/films}">Visualizza tutti i film</a>
 		</div>
 	</div>
