--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,21 +1,19 @@
+
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
-<meta charset="UTF-8" />
-<title>Cinema</title>
+  <div><a> FILM</a> <a> PROGRAMMAZIONE </a>  <a>CHI SIAMO</a> LOGIN</div>
+  
+  <form>
+    Che film vuoi vedere?
+    <input ></input>
+    <button>Cerca</button>
+    <button>Tutti i film </button>
+  </form>
+  <a> Collegamento al film trovato </a>
 </head>
 <body>
-	<section>
-		<a th:href="@{/login}">Accedi</a> <a th:href="@{/register}">Registrati</a>
-	</section>
-	<div>
-		<h4>Operazioni</h4>
-		<div>
-			<a th:href="@{/filmForm}">Inserisci nuovo film</a>
-		</div>
-		<div >
-			<a th:href="@{/films}">Visualizza tutti i film</a>
-		</div>
-	</div>
+
 </body>
 </html>
