Modifiche accesso pagine film

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,11 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<html>
 <head>
-  <div><a> FILM</a> <a> PROGRAMMAZIONE </a>  <a>CHI SIAMO</a> LOGIN</div>
+<meta charset="UTF-8" />
+<title>Homepage</title>
+</head>
+<body>
+  <div><a href="/films">FILM</a> <a> PROGRAMMAZIONE </a>  <a>CHI SIAMO</a> LOGIN</div>
   
   <form>
     Che film vuoi vedere?
@@ -12,7 +14,6 @@
     <button>Tutti i film </button>
   </form>
   <a> Collegamento al film trovato </a>
-</head>
 <body>
 
 </body>
