--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,19 +1,16 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<html>
 <head>
-  <div><a> FILM</a> <a> PROGRAMMAZIONE </a>  <a>CHI SIAMO</a> LOGIN</div>
-  
-  <form>
-    Che film vuoi vedere?
-    <input ></input>
-    <button>Cerca</button>
-    <button>Tutti i film </button>
-  </form>
-  <a> Collegamento al film trovato </a>
 </head>
 <body>
-
+<div>
+	<span> <a> FILM</a> <a> PROGRAMMAZIONE </a> <a>CHI SIAMO</a> <a th:href = "@{login}">LOGIN</a> </span>
+</div>
+<form>
+	Che film vuoi vedere? <input></input>
+	<button>Cerca</button>
+	<button>Tutti i film</button>
+</form>
+<a> Collegamento al film trovato </a>
 </body>
 </html>
