--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -15,6 +15,9 @@
 		<div>
 			<button type="submit">Conferma</button>
 		</div>
+		<div> Non sei ancora Registrato? Fallo subito!
+			<a th:href="@{/register}">Registrati</a>		
+		</div>
 	</form>
 </body>
 </html>
