--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html  xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8" />
-<title>Homepage</title>
-</head>
+ <meta charset="utf-8">
+ <title>Cinema Siw</title>
+  <link rel="stylesheet" href="/index.css" ></link>
+ </head>
+<header>
+   <h1> CINEMA SIW </h1>
+  <div class="navigationMenu">
+    <div><a  href="/films"><strong> FILM </strong></a></div>
+    <div><a th:unless="${userLoggato}"th:href="@{/login}"><strong> PROGRAMMAZIONE </strong></a></div>
+    <div><a th:if="${userLoggato}" th:href="@{/prenota}"><strong>CHI SIAMO</strong></a> </div>
+    <div><a><strong> LOGIN </strong></a></div>
+  </div>
+ 
+  
+</div>
+</header>
 <body>
-  <div> <span> <a href="/films">FILM</a> <a> PROGRAMMAZIONE </a>  <a>CHI SIAMO</a> 
-  <a th:unless="${userLoggato}"th:href="@{/login}">LOGIN</a> 
-  <a th:if="${userLoggato}" th:href="@{/prenota}">PRENOTA</a> </span> </div>
   <form>
-    Che film vuoi vedere?
-    <input ></input>
+    <div>Che film vuoi vedere?</div>
+    <input placeholder="Inserisci il nome di un film" ></input>
+    <div>
     <button>Cerca</button>
     <button>Tutti i film </button>
+  </div>
   </form>
-  <a> Collegamento al film trovato </a>
-<body>
 </body>
+<footer>
+  <div id="footerFlex">
+  <text><strong>Cinema Siw</strong></text>
+  <text>Via della Vasca Navale, 79 - 00146 - Roma </text>
+  <a  href="tel:+39 3210456789">Tel. +39 3210456789</a>
+  <a href="mailto:info@michelincatering.it"> info@cinemasiw.it</a>
+</div>
+</footer>
 </html>
