--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,9 +9,10 @@
    <h1> CINEMA SIW </h1>
   <div class="navigationMenu">
     <div><a  href="/films"><strong> FILM </strong></a></div>
-    <div><a th:unless="${userLoggato}"th:href="@{/login}"><strong> PROGRAMMAZIONE </strong></a></div>
-    <div><a th:if="${userLoggato}" th:href="@{/prenota}"><strong>CHI SIAMO</strong></a> </div>
-    <div><a><strong> LOGIN </strong></a></div>
+    <div><a><strong> PROGRAMMAZIONE </strong></a></div>
+    <div><strong>CHI SIAMO</strong></a> </div>
+    <div><a  th:unless="${userLoggato}"th:href="@{/login}"><strong> LOGIN </strong></a></div>
+  	<div><a th:if="${userLoggato}" th:href="@{/prenota}">PRENOTA</a></div>
   </div>
  
   
