--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -1,26 +1,45 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8" />
-<title>Registrazione Utente</title>
-</head>
 <body>
-	<form th:action="@{/register}" method="post">
-		<div>
-			name: <input type="text" name="nome" />
-		</div>
-		<div>
-			cognome: <input type="text" name="cognome" />
-		</div>
-		<div>
-			username: <input type="text" name="username" />
-		</div>
-		<div>
-			password: <input type="text" name="password" />
-		</div>
-		<div>
-			<button type="submit">Conferma</button>
-		</div>
-	</form>
+	<div>
+		<h3>Registrazione Utente</h3>
+		<form th:action="@{/register}" method="POST">
+			<table>
+				<tr>
+					<td>Username</td>
+					<td><input type="text" placeholder="username" required
+						th:field="${credentials.username}" /></td>
+					<td th:if="${#fields.hasErrors('credentials.username')}"
+						th:errors="${credentials.username}" th:style="'color:red'"></td>
+				</tr>
+				<tr>
+					<td>Password</td>
+					<td><input type="password" placeholder="password" required
+						th:field="${credentials.password}" /></td>
+					<td th:if="${#fields.hasErrors('credentials.password')}"
+						th:errors="${credentials.password}" th:style="'color:red'"></td>
+				</tr>
+				<tr>
+					<td>Nome</td>
+					<td><input type="text" placeholder="nome" required
+						th:field="${user.nome}" /></td>
+					<td th:if="${#fields.hasErrors('user.nome')}"
+						th:errors="${user.nome}" th:style="'color:red'"></td>
+				</tr>
+				<tr>
+					<td>Cognome</td>
+					<td><input type="text" placeholder="cognome" required
+						th:field="${user.cognome}" /></td>
+					<td th:if="${#fields.hasErrors('user.cognome')}"
+						th:errors="${user.cognome}" th:style="'color:red'"></td>
+				</tr>
+				<tr>
+					<td>
+						<button type="submit">Registra</button>
+					</td>
+				</tr>
+			</table>
+		</form>
+	</div>
 </body>
 </html>
