--- a/src/main/resources/templates/registrationSuccessful.html
+++ b/src/main/resources/templates/registrationSuccessful.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
-<meta charset="UTF-8" />
-<title>Registrazione completata</title>
-</head>
+<meta charset="utf-8">
+ <title>Cinema Siw</title>
+  <link rel="stylesheet" href="/registrationSuccessfull.css" ></link>
+ </head>
+<header>
+   <h1> CINEMA SIW </h1>
+  <div class="navigationMenu">
+     <div><a  href="/films"><strong> FILM </strong></a></div>
+    <div><a><strong> PROGRAMMAZIONE </strong></a></div>
+    <div><strong>CHI SIAMO</strong></a> </div>
+    <div><a  th:unless="${userLoggato}"th:href="@{/login}"><strong> LOGIN </strong></a>
+  	<a th:if="${userLoggato}" th:href="@{/prenota}">PRENOTA</a></div>
+ </div>
+</div>
+</header>
 <body>
-	<div>
-		<h4>Registrazione completata con successo. <br> </h4>
-		<h4>Congratulazioni!</h4>
-	</div>
-	<footer>
-		<a href="/">Home</a>
-	</footer>
-</body>
+  <div id="message">
+  <h1>Congratulazioni!</h1>
+  <text>Registrazione completata con successo.</text>
+  </div>
+  </body>
+<footer>
+  <div id="footerFlex">
+  <text><strong>Cinema Siw</strong></text>
+  <text>Via della Vasca Navale, 79 - 00146 - Roma </text>
+  <a  href="tel:+39 3210456789">Tel. +39 3210456789</a>
+  <a href="mailto:info@michelincatering.it"> info@cinemasiw.it</a>
+</div>
+</footer>
 </html>
