--- a/src/main/resources/static/film.css
+++ b/src/main/resources/static/film.css
@@ -32,7 +32,6 @@ header h1{
   background-color: steelBlue;
 }
 
-
 #flexBody{
   display: flex;
   flex-direction: column;
@@ -42,86 +41,30 @@ header h1{
 }
 
 
-
-
-
 div#flexBody h1{
   margin-left: 5%;
   margin-bottom: 2%;
-
+  text-align: center;
 }
 
-
-.Item{
-  margin-left: 7%;
-  margin-bottom:10%;
-  width: 80%;
+p{
+  margin-left:5%;
+  font-style: italic;
+  font-size: 17px;
+  text-align: center;
 }
 
-.Azione{
-  margin-left: 7%;
-  margin-bottom:10%;
-  width: 20%;
-}
-
-div.Item:hover{
-  background-color: lightblue;
-  }
-
-div.Item text{
-  color: dimgrey;
-  font-style: italic; 
-  margin-left: 2%
-}
-
-
-#titolo{
-  display: flex;
+.line{
+  display:flex;
   align-items: center;
+  gap: 10px;
+  justify-content: center;
+  margin-left: 5%;
 }
 
-#titolo text{
-  font-size: 80%;
-  margin-top: 0.3%;
-  margin-left: 1%
+div.line{
+  margin-bottom: -10px;
 }
-
-
-
-button{
-  background-color: lightSkyBlue;
-  border-color: steelBlue;
-  width: 100%;
-  font-size: 15px;
-}
-
-
-#elementoLista{
-  display: flex;
-  align-items: center;
-
-}
-
-
-div.Item a:link{
-  color: black;
-  text-decoration: none;
-}
-
-div.Item a:visited{
-  color: black;
-  text-decoration: none;
-}
-
-.filmLink{
-  display: block;
-  width: 100%;
-}
-
-
-
-
-
 
 footer a:link{
   color:black;
@@ -136,7 +79,7 @@ footer{
   display:flex;
   height:150px;
   background-color: SteelBlue;
- margin:-10px;
+ margin:10px;
 
   
 }
@@ -152,3 +95,4 @@ footer{
   
 }
   
+
