--- a/src/main/resources/static/filmForm.css
+++ b/src/main/resources/static/filmForm.css
@@ -32,95 +32,64 @@ header h1{
   background-color: steelBlue;
 }
 
-
-#flexBody{
+body{
+ text-align:center;
+}
+h1{
+  margin-top:5%;
+}
+form{
   display: flex;
   flex-direction: column;
-  margin-bottom: 10%;
-  
-  
+  align-items: flex-end;
+  text-align:right;
+  margin-left:38%;
+  margin-right: 44%;
+  margin-top: 1%;
+  margin-bottom: 20%;
 }
 
-
-
-
-
-div#flexBody h1{
-  margin-left: 5%;
-  margin-bottom: 2%;
-
-}
-
-
-.Item{
-  margin-left: 7%;
-  margin-bottom:10%;
-  width: 80%;
-}
-
-.Azione{
-  margin-left: 7%;
-  margin-bottom:10%;
-  width: 20%;
-}
-
-div.Item:hover{
-  background-color: lightblue;
-  }
-
-div.Item text{
-  color: dimgrey;
-  font-style: italic; 
-  margin-left: 2%
-}
-
-
-#titolo{
-  display: flex;
-  align-items: center;
-}
-
-#titolo text{
+span{
+  color: steelBlue;
+  font-weight:bold;
   font-size: 80%;
-  margin-top: 0.3%;
-  margin-left: 1%
+  text-align: right;
 }
 
+input{
+  margin-left: 3%;
+  text-align:left;
+  box-sizing: border-box;
+  border: 2px inset steelBlue;
+  background-color: lightSkyBlue;
+}
 
 
 button{
-  background-color: lightSkyBlue;
+  margin-right: 25%;
+  margin-top: 10%;
+  background-color: azure;
+  border-radius: 40%;
+  font-size: 70%;
   border-color: steelBlue;
-  width: 100%;
-  font-size: 15px;
 }
 
-
-#elementoLista{
-  display: flex;
-  align-items: center;
-
-}
-
-
-div.Item a:link{
-  color: black;
-  text-decoration: none;
-}
-
-div.Item a:visited{
-  color: black;
-  text-decoration: none;
-}
-
-.filmLink{
-  display: block;
-  width: 100%;
+button:hover{
+  background-color: tan;
 }
 
 
 
+.campo{
+  display:flex;
+  margin-bottom: 2%;
+}
 
+
+form div{
+
+  font-size:110%;
+}
 
 
 footer a:link{
@@ -136,7 +105,7 @@ footer{
   display:flex;
   height:150px;
   background-color: SteelBlue;
- margin:-10px;
+ margin:10px;
 
   
 }
@@ -152,3 +121,4 @@ footer{
   
 }
   
+
