--- a/src/main/resources/static/prenotazioneForm.css
+++ b/src/main/resources/static/prenotazioneForm.css
@@ -32,93 +32,32 @@ header h1{
   background-color: steelBlue;
 }
 
+h3{
+  margin-top: 30px;
+  text-align: center;
+  margin-bottom: 40px;
+}
 
-#flexBody{
+form{
   display: flex;
   flex-direction: column;
-  margin-bottom: 10%;
-  
-  
+   width: 150px;
+  justify-content: center;
+  margin-left: 45%;
 }
-
-
-
-
-
-div#flexBody h1{
-  margin-left: 5%;
-  margin-bottom: 2%;
-
-}
-
-
-.Item{
-  margin-left: 7%;
-  margin-bottom:10%;
-  width: 80%;
-}
-
-.Azione{
-  margin-left: 7%;
-  margin-bottom:10%;
-  width: 20%;
-}
-
-div.Item:hover{
-  background-color: lightblue;
-  }
-
-div.Item text{
-  color: dimgrey;
-  font-style: italic; 
-  margin-left: 2%
-}
-
-
-#titolo{
-  display: flex;
-  align-items: center;
-}
-
-#titolo text{
-  font-size: 80%;
-  margin-top: 0.3%;
-  margin-left: 1%
-}
-
-
 
 button{
-  background-color: lightSkyBlue;
+  
+  margin-top: 10%;
+  background-color: azure;
+  border-radius: 40%;
+  font-size: 70%;
   border-color: steelBlue;
-  width: 100%;
-  font-size: 15px;
 }
 
-
-#elementoLista{
-  display: flex;
-  align-items: center;
-
+button:hover{
+  background-color: lightSkyBlue;
 }
-
-
-div.Item a:link{
-  color: black;
-  text-decoration: none;
-}
-
-div.Item a:visited{
-  color: black;
-  text-decoration: none;
-}
-
-.filmLink{
-  display: block;
-  width: 100%;
-}
-
-
 
 
 
@@ -136,7 +75,8 @@ footer{
   display:flex;
   height:150px;
   background-color: SteelBlue;
- margin:-10px;
+  margin-top: 240px;
+ 
 
   
 }
@@ -152,3 +92,4 @@ footer{
   
 }
   
+
