--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -1,45 +1,41 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<body>
-	<div>
-		<h3>Registrazione Utente</h3>
-		<form th:action="@{/register}" method="POST">
-			<table>
-				<tr>
-					<td>Username</td>
-					<td><input type="text" placeholder="username" required
-						th:field="${credentials.username}" /></td>
-					<td th:if="${#fields.hasErrors('credentials.username')}"
-						th:errors="${credentials.username}" th:style="'color:red'"></td>
-				</tr>
-				<tr>
-					<td>Password</td>
-					<td><input type="password" placeholder="password" required
-						th:field="${credentials.password}" /></td>
-					<td th:if="${#fields.hasErrors('credentials.password')}"
-						th:errors="${credentials.password}" th:style="'color:red'"></td>
-				</tr>
-				<tr>
-					<td>Nome</td>
-					<td><input type="text" placeholder="nome" required
-						th:field="${user.nome}" /></td>
-					<td th:if="${#fields.hasErrors('user.nome')}"
-						th:errors="${user.nome}" th:style="'color:red'"></td>
-				</tr>
-				<tr>
-					<td>Cognome</td>
-					<td><input type="text" placeholder="cognome" required
-						th:field="${user.cognome}" /></td>
-					<td th:if="${#fields.hasErrors('user.cognome')}"
-						th:errors="${user.cognome}" th:style="'color:red'"></td>
-				</tr>
-				<tr>
-					<td>
-						<button type="submit">Registra</button>
-					</td>
-				</tr>
-			</table>
-		</form>
-	</div>
+<html>
+<head>
+<meta charset="utf-8">
+ <title>Cinema Siw</title>
+  <link rel="stylesheet" href="/registerForm.css" ></link>
+ </head>
+<header>
+   <h1> CINEMA SIW </h1>
+  <div class="navigationMenu">
+     <div><a  href="/films"><strong> FILM </strong></a></div>
+    <div><a><strong> PROGRAMMAZIONE </strong></a></div>
+    <div><strong>CHI SIAMO</strong></a> </div>
+    <div><a  th:unless="${userLoggato}"th:href="@{/login}"><strong> LOGIN </strong></a>
+  	<a th:if="${userLoggato}" th:href="@{/prenota}">PRENOTA</a></div>
+ </div>
+</div>
+</header>
+ <body>
+  <h1> Registrati</h1>
+<form form th:action="@{/register}" method="POST">
+<div class="campo">username:<input type="text" placeholder="username" required th:field="${credentials.username}" /></div>
+<span th:if="${#fields.hasErrors('credentials.username')}" th:errors="*{credentials.username}"></span>
+<div class="campo">password:<input type="password" placeholder="password" required th:field="${credentials.password}"  /></div>
+<span th:if="${#fields.hasErrors('credentials.password')}" th:errors="*{credentials.password}"></span>
+<div class="campo">nome:<input type="text" placeholder="nome" required th:field="${user.nome}" /></div>
+<span th:if="${#fields.hasErrors('user.nome')}" th:errors="*{user.nome}"></span>
+<div class="campo">cognome<input type="text" placeholder="cognome" required th:field="${user.cognome}"/></div>
+<span th:if="${#fields.hasErrors('user.cognome')}" th:errors="*{user.cognome}"></span>
+<div><button type="submit">Registra</button></div>
+</form>
 </body>
+<footer>
+  <div id="footerFlex">
+  <text><strong>Cinema Siw</strong></text>
+  <text>Via della Vasca Navale, 79 - 00146 - Roma </text>
+  <a  href="tel:+39 3210456789">Tel. +39 3210456789</a>
+  <a href="mailto:info@michelincatering.it"> info@cinemasiw.it</a>
+</div>
+</footer>
 </html>
