--- a/src/main/resources/static/login.css
+++ b/src/main/resources/static/login.css
@@ -7,8 +7,13 @@ header h1{
   padding-top: 5vh;
   padding-bottom: 5vh;
   margin-bottom: 0;
+  margin-top:0;
   background-color: lightSkyBlue
   
+}
+header h1 a{
+	color: black;
+	text-decoration: none;
 }
 
 .navigationMenu a{
@@ -114,7 +119,7 @@ footer{
   display:flex;
   height:150px;
   background-color: SteelBlue;
-  margin-top: 60px;
+   margin-top: 200px;
  
 
   
