--- a/src/main/resources/static/spettacoli.css
+++ b/src/main/resources/static/spettacoli.css
@@ -7,10 +7,15 @@ header h1{
   padding-top: 5vh;
   padding-bottom: 5vh;
   margin-bottom: 0;
+    margin-top:0;
   background-color: lightSkyBlue
   
 }
 
+header h1 a{
+	color: black;
+	text-decoration: none;
+}
 .navigationMenu a{
   color: white;
   text-decoration: none;
