--- a/src/main/resources/static/filmForm.css
+++ b/src/main/resources/static/filmForm.css
@@ -7,8 +7,14 @@ header h1{
   padding-top: 5vh;
   padding-bottom: 5vh;
   margin-bottom: 0;
+    margin-top:0;
   background-color: lightSkyBlue
   
+}
+
+header h1 a{
+	color: black;
+	text-decoration: none;
 }
 
 .navigationMenu a{
@@ -105,7 +111,8 @@ footer{
   display:flex;
   height:150px;
   background-color: SteelBlue;
- margin:10px;
+ 
+  margin-top: 200px;
 
   
 }
