--- a/src/main/resources/static/registrationSuccessfull.css
+++ b/src/main/resources/static/registrationSuccessfull.css
@@ -7,8 +7,13 @@ header h1{
   padding-top: 5vh;
   padding-bottom: 5vh;
   margin-bottom: 0;
+    margin-top:0;
   background-color: lightSkyBlue
   
+}
+h1 a{
+	color: black;
+	text-decoration: none;
 }
 
 .navigationMenu a{
@@ -64,7 +69,7 @@ footer{
   display:flex;
   height:150px;
   background-color: SteelBlue;
- margin-top:170px;
+ margin-top: 200px;
 
   
 }
