--- a/src/main/resources/templates/prenotazione.html
+++ b/src/main/resources/templates/prenotazione.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/riepilogoPrenotazione.css" ></link>
  </head>
 <header>
-   <h1> CINEMA SIW </h1>
+    <h1> <a href="/">CINEMA SIW</a> </h1>
   <div class="navigationMenu">
      <div><a  href="/films"><strong> FILM </strong></a></div>
     <div><a><strong> PROGRAMMAZIONE </strong></a></div>
