--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -9,7 +9,7 @@
     <h1> <a  href="/">CINEMA SIW</a> </h1>
   <div class="navigationMenu">
      <div><a  href="/films"><strong> FILM </strong></a></div>
-    <div><a><strong> PROGRAMMAZIONE </strong></a></div>
+    <div><a href="/spettacoli"><strong> PROGRAMMAZIONE </strong></a></div>
     <div><strong>CHI SIAMO</strong></a> </div>
     <div><a  th:unless="${userLoggato}"th:href="@{/login}"><strong> LOGIN </strong></a>
   	<a th:if="${userLoggato}" th:href="@{/prenota}">PRENOTA</a></div>
@@ -22,9 +22,9 @@
 <div class="campo">username:<input type="text" name="username" /></div>
 <div class="campo">password:<input type="text" name="password" /></div>
 <button type="submit">Conferma</button></div>
-<div th:if="${error}" >
-	errore autenticazione
-</div>
+<span th:if="${error}">
+<p>Errore durante l'autenticazione</p>
+</span>
 </form>
 <div> Non sei ancora Registrato? Fallo subito!</div>
 <a th:href="@{/register}"><strong>Registrati<strong></a>		
