--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,24 +6,7 @@
 	<link rel="stylesheet" href="/index.css"></link>
 </head>
 <body>
-	<header>
-		<h1>CINEMA SIW</h1>
-		<div class="navigationMenu">
-			<div>
-				<a href="/films"><strong> FILM </strong></a>
-			</div>
-			<div>
-				<a href="/spettacoli"><strong> PROGRAMMAZIONE </strong></a>
-			</div>
-			<div>
-				<strong>CHI SIAMO</strong>
-			</div>
-			<div>
-				<a th:unless="${userLoggato}" th:href="@{/login}"><strong>
-						LOGIN </strong></a> <a th:if="${userLoggato}" th:href="@{/prenota}">PRENOTA</a>
-			</div>
-		</div>
-	</header>
+	<header th:replace="fragments/layout.html :: navbar"></header>
 	
 	<form th:action="@{/film/nome}" method="get">
 		<div>Che film vuoi vedere?</div>
@@ -36,13 +19,6 @@
 	
 	<a th:href="@{/films}"><button>Tutti i film</button></a>
 	
-	<footer>
-		<div id="footerFlex">
-			<text> <strong>Cinema Siw</strong></text>
-			<text>Via della Vasca Navale, 79 - 00146 - Roma </text>
-			<a href="tel:+39 3210456789">Tel. +39 3210456789</a> 
-			<a href="mailto:info@michelincatering.it"> info@cinemasiw.it</a>
-		</div>
-	</footer>
+	<footer th:replace="fragments/layout.html :: footer"></footer>
 </body>
 </html>
