--- a/src/main/resources/templates/films.html
+++ b/src/main/resources/templates/films.html
@@ -17,7 +17,7 @@
 			<a><strong> PROGRAMMAZIONE </strong></a>
 		</div>
 		<div>
-			<strong>CHI SIAMO</strong>
+			<strong>CHI SIAMO</strong></a>
 		</div>
 		<div>
 			<a th:unless="${userLoggato}" th:href="@{/login}"><strong>
@@ -30,36 +30,34 @@
 		<h1>I FILM IN PROGRAMMA</h1>
 		<hr width="92%" color="steelBlue" size="5%"></hr>
 		<div id="elementoLista" th:each="film : ${films}">
+
 			<div class="Item">
-				<a th:href="@{'/film' + '/' + ${film.id}}" class="filmLink"> <span
-					th:text="${film.titolo}">titolo film</span> <span
-					th:text="${film.descrizione}">descrizione</span>
+				<a th:href="@{'/film' + '/' + ${film.id}}" class="filmLink">
+					<h3 th:text="${film.titolo}">titolo film</h3> <text
+						th:text="${film.descrizione}">descrizione</text>
 				</a>
 			</div>
 			<div class="Azione" th:if="${amministratoreLoggato}">
 				<form th:action="@{'/toDeleteFilm' + '/' +${film.id}}" method="post">
 					<button type="submit">Elimina</button>
 				</form>
-				<div class="Azione" th:if="${amministratoreLoggato}">
-					<form th:action="@{'/film' + '/' +${film.id}}" method="post">
-						<button type="submit">Inserisci film</button>
-					</form>
-				</div>
-				<div>
-					<button type="submit">Prenota</button>
-				</div>
 			</div>
+			<div class="Azione" th:if="${userLoggato}">
+				<form th:action="@{'/prenotazione'+'/'+ ${film.id}}" method="post">
+					<button type="submit">Prenota</button>
+				</form>
+			</div>
+
 		</div>
 	</div>
 	<footer>
 		<div id="footerFlex">
-			<div>
-				<strong>Cinema Siw</strong>
-			</div>
-			<div>Via della Vasca Navale, 79 - 00146 - Roma</div>
+			<text>
+			<strong>Cinema Siw</strong></text>
+			<text>Via della Vasca Navale, 79 - 00146 - Roma </text>
 			<a href="tel:+39 3210456789">Tel. +39 3210456789</a> <a
 				href="mailto:info@michelincatering.it"> info@cinemasiw.it</a>
 		</div>
-	</footer>
 </body>
+</footer>
 </html>
